<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- app 信息-->
    <string name="hello">Hello!</string>
    <string name="app_name">稳和健康</string>
		
	<!-- 关于 -->
	<string name="text_appname">软件名称：</string>
	<string name="text_versionName">版本：</string>
	<string name="text_versionCode">版本号：</string>
		
	<string name="vector">风的影子</string>
	
	<!-- 登录相关 -->
	<string name="user_name">用户名</string>
	<string name="password">密码</string>
	<string name="hint_user">请输入帐号</string>
	<string name="hint_password">请输入密码</string>
	<string name="save_userAndPassword">保存用户名和密码</string>
	<string name="save_password">记住密码</string>
	<string name="draw_password">显示密码</string>
	<string name="enter">登录</string>
	<string name="register">注册</string>
	<string name="enter_out">注销</string>
	<string name="enter_error">登录失败</string>
	
	<string name="forget_the_password">忘记密码</string>
	<!-- 提示 -->
	<string name="up_error">数据上传失败</string>
	<string name="no_data">暂无数据</string>
	<!-- 分类-->
	<string name="xuetangyi">血糖仪</string>
	<string name="xueyayi">血压仪</string>
	<string name="tiwenji">体温计</string>
	<string name="xueyangyi">血氧仪</string>
	<string name="taixinyi">胎心仪</string>
	<string name="tizhongji">体重计</string>
	<string name="xindianyi">心电仪</string>
	
	<string name="celiang">测量</string>
	<string name="jilu">记录</string>
	<string name="zhixun">资讯</string>
	<string name="geren">个人</string>
	
	<!-- 标题栏 -->
	<string name="measure">测量</string>
	<string name="record">记录</string>
	<string name="health_information">健康资讯</string>
	<string name="personal_setting">个人设置</string>
	<string name="present_record">当天记录</string>
	<string name="andrology">男科</string>
	<string name="gynecology">妇科</string>
	<string name="keep_in_good_health">养生</string>
	<string name="infant_mom">母婴</string>
	<string name="hairdressing">美容</string>
		
	
	<string name="personal_details">个人信息</string>
	<string name="my_consult">我的咨询</string>
	<string name="send_type">发送方式</string>
		
	<string name="about_us">关于我们</string>
	<string name="network_send">网络发送</string>
	<string name="sms_send">短信发送</string>
		
	<string name="warm_prompt">温馨提示：</string>
	<string name="hint_text">在选择流量或短信方式发送数据时，会产生一定的数据流量或短信费，所产生的具体费用将由运营商决定。</string>
		
	<!-- 数据表 个人信息 -->
	<string name="info_personal_details">个人信息</string>
	<string name="info_accounts">帐号</string>
	<string name="info_name">姓名</string>
	<string name="info_marital_status">婚姻状况</string>
	<string name="info_gender">性别</string>
	<string name="info_doctor">责任医生</string>
	<string name="info_identity_card_number">身份证号</string>
	<string name="info_address">地址</string>
	<string name="info_tel">联系方式</string>
	<string name="info_mail">邮箱</string>
	
	<string name="info_previous_history">既往史</string>
	<string name="info_allergy">过敏史</string>
	<string name="info_contagion">慢病/传染病</string>
	<string name="info_personal_life">个人生活</string>
	
	<!-- 数据图 -->
	<string name="chart_tiwen">体温数据图</string>
	<string name="chart_xuetang">血糖数据图</string>
	<string name="chart_xueya">血压数据图</string>
	<string name="chart_xueyang">血氧数据图</string>
	
	<string name="prior15">前15天</string>
	<string name="next15">后15天</string>
	<string name="serial_number">序号</string>
	<string name="time">时间</string>
	<string name="temperature">温度</string>
	<string name="animal_heat">体温</string>
	<string name="concentration">浓度</string>
	<string name="oxyhemoglobin_saturation">血氧饱和度</string>
	<string name="high_pressure">高压</string>
	<string name="low_tension">低压</string>
	<string name="pulse_rate">脉率</string>
	<string name="perfusion_index">灌注指数</string>
	<string name="measuring_time">测量时间</string>
	<string name="constitutional_index">体质指数</string>
	<string name="weight">体重</string>
	<string name="spo2">SPO2</string>
	<string name="pr">PR</string>
	<string name="pi">PI</string>
	<string name="tab_oxyhemoglobin_saturation">血氧饱和度(SPO2)</string>
	<string name="tab_pulse_rate">脉率(PR)</string>
	<string name="tab_perfusion_index">灌注指数(PI)</string>
	<string name="tab_high_pressure">高压</string>
	<string name="tab_low_tension">低压</string>
	<string name="tab_pulse_rate2">脉率</string>
	
	
		<!-- 对话框相关 -->
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	
	<string name="yes">是</string>
	<string name="no">否</string>
  <!-- 正在搜索 -->
  <string name="no_device">未搜索到设备</string>
  <string name="searching">正在搜索</string>
	<string name="bluetooth_searching">蓝牙搜索中</string>
  
	<!-- 按钮相关 -->
	<string name="search_again">重新搜索</string>
	<string name="stop_search">停止搜索</string>
	<string name="search">搜索</string>
	<string name="collect">采集</string>
	<string name="empty">清空</string>
	<!-- 退出相关 -->
  <string name="exit_hint">再按一次返回键退出</string>
	<string name="back">返回</string>
	<string name="quit_text">你确定要退出吗？</string>
	
</resources>
