<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/serial_number"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:gravity="center"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/time"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:gravity="center"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/spo2"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:gravity="center"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/pr"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:gravity="center"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/pi"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:gravity="center"/>

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"
			android:layout_weight="1.0"/>

	</LinearLayout>

	<FrameLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_weight="1.0">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<ListView
				android:id="@+id/facility_listview"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1.0"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical">

				<TextView
					android:layout_height="wrap_content"
					android:text=""
					android:layout_width="match_parent"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal">

					<TextView
						android:layout_height="wrap_content"
						android:text="@string/tab_oxyhemoglobin_saturation"
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

					<TextView
						android:layout_height="wrap_content"
						android:text="@string/tab_pulse_rate"
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

					<TextView
						android:layout_height="wrap_content"
						android:text="@string/tab_perfusion_index"
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

				</LinearLayout>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal">

					<TextView
						android:id="@+id/oxyhemoglobin_saturation"
						android:layout_height="wrap_content"
						android:text=""
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

					<TextView
						android:id="@+id/pulse_rate"
						android:layout_height="wrap_content"
						android:text=""
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

					<TextView
						android:id="@+id/perfusion_index"
						android:layout_height="wrap_content"
						android:text=""
						android:layout_width="match_parent"
						android:layout_weight="1.0"
						android:gravity="center"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

		<include
			layout="@layout/progress"/>

	</FrameLayout>

	<LinearLayout
		android:layout_height="64dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/search"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:background="@drawable/button_blue_small"
			android:layout_gravity="left|center"
			android:id="@id/btn_search"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/collect"
			android:background="@drawable/button_blue_small"
			android:layout_width="match_parent"
			android:layout_weight="1.0"
			android:layout_gravity="center"
			android:id="@id/btn_collect"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/empty"
			android:layout_width="match_parent"
			android:layout_gravity="right|center"
			android:layout_weight="1.0"
			android:background="@drawable/button_blue_small"
			android:id="@id/btn_empty"/>

	</LinearLayout>

</LinearLayout>

