<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_launcher"/>

	<EditText
		android:hint="@string/hint_user"
		android:layout_height="wrap_content"
		android:inputType="textPersonName"
		android:ems="10"
		android:layout_width="match_parent"
		android:drawableLeft="@drawable/ic_login_account"
		android:singleLine="true"
		android:layout_margin="10dp"/>

	<EditText
		android:hint="@string/hint_password"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:drawableLeft="@drawable/ic_possword"
		android:singleLine="true"
		android:layout_margin="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center">

			<CheckBox
				android:layout_weight="1.0"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/save_userAndPassword"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"/>

		<CheckBox
			android:layout_weight="1.0"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/draw_password"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"/>

	</LinearLayout>

	<Button
		android:layout_height="wrap_content"
		android:text="@string/enter"
		android:layout_width="240dp"/>

</LinearLayout>

