<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:background="@color/background"
	>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_accounts"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_name"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_marital_status"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_gender"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_doctor"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_identity_card_number"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_address"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_tel"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_mail"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_previous_history"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"
				android:visibility="gone"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_allergy"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"
				android:visibility="gone"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_contagion"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"
				android:visibility="gone"/>

		</FrameLayout>

		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="left|center"
			android:layout_margin="4dp">

			<Button
				android:layout_height="50dp"
				android:text="@string/info_personal_life"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:layout_weight="1.0"
				android:layout_gravity="center"
				android:gravity="left|center"
				android:background="@drawable/list_item0"
				android:visibility="gone"/>

		</FrameLayout>

	</LinearLayout>

</ScrollView>

