<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

	<ImageView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/icon"
		android:src="@drawable/ic_launcher"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/text_appname"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

		<TextView
			android:id="@+id/about_appname"
			android:layout_height="wrap_content"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/text_versionName"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

		<TextView
			android:id="@+id/about_versionName"
			android:layout_height="wrap_content"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/text_versionCode"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

		<TextView
			android:id="@+id/about_cersionCode"
			android:layout_height="wrap_content"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"/>

	</LinearLayout>

</LinearLayout>

